syntax = "proto3";
// import "google/protobuf/timestamp.proto";
option csharp_namespace = "BookService.Protos";

message BookRequest {
    string BookId = 1;
}

message BookResponse {
    string Id = 1;
    string Name = 2;
    string Author = 3;
    double Price = 4;
    string Image = 5;
    string Category = 6;
    // google.protobuf.Timestamp CreatedDate = 7;
    int32 PageNumber = 7;
    int32 TotalOfBook = 8;
    bool IsAvailable = 9;
}

service GetBookService {
    rpc GetBook(BookRequest) returns (BookResponse);
}

